feat: Init commit
Signed-off-by: Tim Lai <tuanvu0995@gmail.com>

--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "dev": "ts-node-dev --respawn --transpile-only src/app.ts"
+    "dev": "ts-node-dev --respawn --transpile-only src/app.ts",
+    "start": "tsc && node dist/app.js"
   },
   "author": "",
   "license": "ISC",
@@ -12,5 +13,8 @@
     "@types/node": "^20.14.10",
     "ts-node-dev": "^2.0.0",
     "typescript": "^5.5.3"
+  },
+  "dependencies": {
+    "chalk": "^4.1.2"
   }
 }
