--- a/package.json
+++ b/package.json
@@ -4,13 +4,15 @@
   "main": "index.js",
   "scripts": {
     "dev": "ts-node-dev --respawn --transpile-only src/app.ts",
-    "start": "tsc && node dist/app.js"
+    "start": "tsc && node dist/app.js",
+    "format": "prettier --write src/**/*.ts"
   },
   "author": "",
   "license": "ISC",
   "description": "",
   "devDependencies": {
     "@types/node": "^20.14.10",
+    "prettier": "3.3.3",
     "ts-node-dev": "^2.0.0",
     "typescript": "^5.5.3"
   },
@@ -18,3 +20,4 @@
     "chalk": "^4.1.2"
   }
 }
+
