fix: Some UI bugs
Signed-off-by: Tim Lai <tuanvu0995@gmail.com>

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "snake-game",
-  "description": "A simple snake game",
+  "description": "A simple snake game in the console",
   "version": "1.0.0",
   "main": "bin/app.js",
   "bin": {
